tests/snapshots/shell__unclosed_paren.snap
---
source: tests/shell.rs
expression: stderr
---
Error: expected rparen to close grouped expression
   ╭─[unclosed_paren:1:13]
   │
 1 │ echo .(1 + 1
   │       ───┬──  
   │          ╰──── this grouped expression
───╯

